--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^4.1.12"
   },
