--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "drizzle-kit": "^0.31.6",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
+    "geist": "^1.5.1",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.2",
